<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>com.aquaticinformatics</groupId>
  <artifactId>aquarius.sdk</artifactId>
  <version>${revision}</version>
  <packaging>jar</packaging>

  <name>aquarius-sdk-java</name>
  <description>The Java SDK for the AQUARIUS Platform</description>
  <url>https://github.com/AquaticInformatics/aquarius-sdk-java</url>

  <organization>
    <name>Aquatic Informatics Inc.</name>
    <url>https://aquaticinformatics.com/</url>
  </organization>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/AquaticInformatics/aquarius-sdk-java/issues</url>
  </issueManagement>

  <licenses>
    <license>
      <name>GNU Affero General Public License</name>
      <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://github.com/AquaticInformatics/aquarius-sdk-java.git</connection>
    <developerConnection>scm:git:git@github.com:AquaticInformatics/aquarius-sdk-java.git</developerConnection>
    <url>https://github.com/AquaticInformatics/aquarius-sdk-java</url>
  </scm>

  <developers>
    <developer>
      <email>opensource@aquaticinformatics.com</email>
      <name>Open Source Aquatics</name>
      <url>https://github.com/OpenSource-AI</url>
      <id>OpenSource-AI</id>
    </developer>
  </developers>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <revision>1.0.0-SNAPSHOT</revision>
  </properties>

  <distributionManagement>
    <!-- We aren't publishing anything to a GitHub Pages site yet -->
    <site>
      <id>sites</id>
      <name>aquarius-sdk-java Site</name>
      <url>https://AquaticInformatics.github.io/aquarius-sdk-java/</url>
    </site>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>net.servicestack</groupId>
      <artifactId>client</artifactId>
      <version>1.0.49</version>
    </dependency>
    <dependency>
      <groupId>org.apache.tika</groupId>
      <artifactId>tika-core</artifactId>
      <version>3.2.2</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.9</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>pl.pragmatists</groupId>
      <artifactId>JUnitParams</artifactId>
      <version>1.1.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <build>
    <plugins>
      <!-- Compile source with javac -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>

      <!-- Supply project site documentation -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.9.0</version>
      </plugin>

      <!-- Set version to avoid out-of-date default (3.3) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.21.0</version>
      </plugin>

      <!-- Bundles source, dependencies, modules, and site documentation into single assembly-->
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>

      <!-- Central Publisher Portal service  -->
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.8.0</version>
        <extensions>true</extensions>
        <configuration>
          <centralBaseUrl>https://central.sonatype.com</centralBaseUrl>
          <publishingServerId>central</publishingServerId>
        </configuration>
        </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.1.0</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- Build and deploy SNAPSHOTS -->
    <!-- We do not create or publish the site for snapshots -->
    <profile>
      <id>deploy</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <useAgent>false</useAgent>
                  <passphraseServerId>gpg.passphrase</passphraseServerId>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>ignore-tests-with-credentials</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <excludedGroups>com.aquaticinformatics.aquarius.sdk.samples.TestRequiresCredentials</excludedGroups>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>    
    <!-- Build and Release to Maven Central -->
    <!-- Publish Site to GitHub -->
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <!-- Binds jar archive creation to lifecycle -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          
          <!-- Generates docs and packages for distribution -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.11.2</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <useAgent>false</useAgent>
                  <passphraseServerId>gpg.passphrase</passphraseServerId>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
